--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@abtnode/file-stream-rotator",
     "version": "0.6.2",
+    "publishConfig": {
+        "access": "public"
+    },
     "description": "Automated stream rotation useful for log files",
     "main": "FileStreamRotator.js",
     "scripts": {
